--- a/app/src/main/res/layout/f_sport_jibu.xml
+++ b/app/src/main/res/layout/f_sport_jibu.xml
@@ -40,8 +40,10 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
         <TextView
+            android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_top"
             android:text="这步数我都不好意思晒"/>
         <LinearLayout
             android:layout_margin="15dp"
