--- a/app/src/main/res/layout/menubar.xml
+++ b/app/src/main/res/layout/menubar.xml
@@ -4,6 +4,7 @@
     android:gravity="center_vertical"
     android:layout_height="@dimen/menubar_height">
     <TextView
+        android:id="@+id/game"
         android:drawableTop="@drawable/ic_top"
         android:gravity="center"
         android:layout_weight="1"
@@ -11,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="game"/>
     <TextView
+        android:id="@+id/sport"
         android:drawableTop="@drawable/ic_top"
         android:gravity="center"
         android:layout_weight="1"
@@ -18,6 +20,7 @@
         android:layout_height="wrap_content"
         android:text="sport"/>
     <TextView
+        android:id="@+id/my"
         android:drawableTop="@drawable/ic_top"
         android:gravity="center"
         android:layout_weight="1"
