--- a/app/src/main/res/layout/f_sport_yundong.xml
+++ b/app/src/main/res/layout/f_sport_yundong.xml
@@ -25,6 +25,7 @@
         android:text="0.00"/>
 
     <Button
+        android:id="@+id/begin"
         android:layout_marginTop="120dp"
         android:layout_centerHorizontal="true"
 
