0512 2338 添加赛事列表，并且网络请求服务器端的赛事数据。

--- a/app/src/main/res/layout/a_db_test.xml
+++ b/app/src/main/res/layout/a_db_test.xml
@@ -2,19 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="我的"/>
     <Button
-        android:id="@+id/db_test"
+        android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="db test"/>
+        android:text="add"/>
     <Button
+        android:id="@+id/search"
         android:layout_width="wrap_content"
-        android:id="@+id/login"
         android:layout_height="wrap_content"
-        android:text="login"/>
+        android:text="searchAll"/>
 
 </LinearLayout>
