--- a/app/src/main/res/layout/f_sport_yundong.xml
+++ b/app/src/main/res/layout/f_sport_yundong.xml
@@ -1,39 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/sport_bg">
 
     <TextView
         android:id="@+id/zlc"
+        android:layout_width="wrap_content"
 
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="总里程"/>
+        android:text="总里程"
+        android:textColor="#fff" />
 
     <TextView
-        android:layout_marginTop="50dp"
-        android:layout_centerHorizontal="true"
-
         android:id="@+id/zlc_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
         android:layout_below="@id/zlc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:text="0.00"/>
-
-    <Button
-        android:id="@+id/begin"
-        android:layout_marginTop="120dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="0.00"
+        android:textColor="#fff"
+        android:textSize="80sp"
+        android:textStyle="bold" />
 
+
+    <FrameLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@id/zlc_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="开始"
-        android:textSize="28sp"/>
+        android:layout_marginTop="120dp">
 
+
+        <cn.test.gudong.myview.BgAnimate
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <Button
+            android:id="@+id/begin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_start"
+            android:text="开始"
+            android:textColor="#fff"
+            android:textSize="28sp" />
+
+
+    </FrameLayout>
 
 </RelativeLayout>
