--- a/app/src/main/res/layout/f_my.xml
+++ b/app/src/main/res/layout/f_my.xml
@@ -1,20 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:background="#fff"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="我的"/>
-    <Button
-        android:id="@+id/db_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="db test"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:id="@+id/login"
-        android:layout_height="wrap_content"
-        android:text="login"/>
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_me_background" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="100dp" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp">
+
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:scaleType="fitXY"
+                        android:background="@drawable/ic_me_background_white"/>
+                       <!-- android:src="@drawable/ic_me_background_white" -->
+
+                    <View
+                        android:layout_gravity="bottom"
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:background="#fff" />
+                </FrameLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+
+                    <ImageView
+                        android:id="@+id/avatar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:src="@drawable/pic_login_avatar" />
+                    <TextView
+                        android:id="@+id/login"
+                        android:paddingBottom="5dp"
+                        android:layout_below="@id/avatar"
+                        android:background="@drawable/text_view_bg_bottom_line"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:textSize="20sp"
+                        android:text="点击登录"/>
+
+                    <ImageView
+                        android:layout_marginRight="8dp"
+                        android:paddingBottom="3dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_me_level"
+                        />
+
+                </RelativeLayout>
+            </FrameLayout>
+
+        </LinearLayout>
+    </ScrollView>
+</FrameLayout>
