--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,18 +7,21 @@
         android:paddingRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_height">
-        <Button
-            android:layout_centerVertical="true"
+
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="返回"/>
+            android:layout_centerVertical="true"
+            android:background="@drawable/ic_common_back_grey"/>
 
         <TextView
+            android:visibility="invisible"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="马拉松赛事"/>
         <TextView
+            android:visibility="invisible"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
