--- a/app/src/main/res/layout/f_my.xml
+++ b/app/src/main/res/layout/f_my.xml
@@ -81,6 +81,11 @@
 
                 </RelativeLayout>
             </FrameLayout>
+            <Button
+                android:id="@+id/test"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="test"/>
 
         </LinearLayout>
     </ScrollView>
