--- a/app/src/main/res/layout/f_my.xml
+++ b/app/src/main/res/layout/f_my.xml
@@ -9,7 +9,13 @@
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
         android:src="@drawable/ic_me_background" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+    </android.support.v7.widget.RecyclerView>
+<!--
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -39,7 +45,7 @@
                         android:layout_marginTop="20dp"
                         android:scaleType="fitXY"
                         android:background="@drawable/ic_me_background_white"/>
-                       <!-- android:src="@drawable/ic_me_background_white" -->
+
 
                     <View
                         android:layout_gravity="bottom"
@@ -82,12 +88,9 @@
 
                 </RelativeLayout>
             </FrameLayout>
-            <Button
-                android:id="@+id/test"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="test"/>
+
 
         </LinearLayout>
-    </ScrollView>
+    </ScrollView>    -->
+
 </FrameLayout>
