--- a/app/src/main/res/layout/list_sport_history.xml
+++ b/app/src/main/res/layout/list_sport_history.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:padding="15dp"
+    android:background="#fff"
+    android:layout_height="wrap_content">
     <LinearLayout
+        android:gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:orientation="vertical"
         android:layout_height="wrap_content">
@@ -11,18 +14,61 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_history_item_walk"/>
         <TextView
+            android:id="@+id/start_time"
+            android:layout_marginTop="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="02日 下午"/>
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_marginLeft="15dp"
+        android:layout_gravity="center_vertical"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
+        android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="38sp"
+        android:textStyle="bold"
         android:text="0.12"/>
     <TextView
+        android:layout_toRightOf="@id/distance"
+        android:layout_alignBaseline="@id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="公里"/>
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_marginRight="15dp"
+        android:layout_gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/duration"
+            android:layout_marginBottom="6dp"
+            android:gravity="center_vertical"
+            android:drawablePadding="5dp"
+            android:drawableLeft="@drawable/ic_history_item_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:00:00"/>
+        <TextView
+            android:id="@+id/speed"
+            android:drawablePadding="5dp"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_history_item_speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1 km/h"/>
+    </LinearLayout>
+
 
 </LinearLayout>
