--- a/app/src/main/res/layout/f_game.xml
+++ b/app/src/main/res/layout/f_game.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <include layout="@layout/toolbar_game"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
