--- a/app/src/main/res/layout/f_sport.xml
+++ b/app/src/main/res/layout/f_sport.xml
@@ -10,6 +10,7 @@
     </android.support.v4.view.ViewPager>
 
     <LinearLayout
+        android:visibility="invisible"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal"
         android:layout_width="wrap_content"
