--- a/app/src/main/res/layout/toolbar_game.xml
+++ b/app/src/main/res/layout/toolbar_game.xml
@@ -9,20 +9,23 @@
         android:layout_height="@dimen/toolbar_height">
 
         <ImageButton
-            android:id="@+id/back"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:background="@drawable/ic_common_back_grey"/>
 
         <TextView
-            android:visibility="invisible"
+            android:textSize="20sp"
+            android:textColor="#000"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="马拉松赛事"/>
         <TextView
-            android:visibility="invisible"
+            android:id="@+id/my_game"
+            android:textSize="19sp"
+            android:textColor="#000"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
