--- a/app/src/main/res/layout/list_sport_history.xml
+++ b/app/src/main/res/layout/list_sport_history.xml
@@ -10,6 +10,7 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
         <ImageView
+            android:id="@+id/image1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_history_item_walk"/>
@@ -35,15 +36,16 @@
         android:layout_height="wrap_content"
         android:textSize="38sp"
         android:textStyle="bold"
-        android:text="0.12"/>
+        android:text="0"/>
     <TextView
         android:layout_toRightOf="@id/distance"
         android:layout_alignBaseline="@id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="公里"/>
+        android:text="m"/>
     </RelativeLayout>
     <LinearLayout
+        android:gravity="left"
         android:layout_marginRight="15dp"
         android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
@@ -67,7 +69,7 @@
             android:drawableLeft="@drawable/ic_history_item_speed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1 km/h"/>
+            android:text="0 m/min"/>
     </LinearLayout>
 
 
