0525 整理项目结构

--- a/app/src/main/res/layout/activity_track_detail.xml
+++ b/app/src/main/res/layout/activity_track_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="cn.test.gudong.TrackActivity">
+    tools:context=".main.fragment.main_sport.TrackActivity">
 
 
     <com.baidu.mapapi.map.MapView
