--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="cn.test.gudong.game.GameDetailActivity">
+    tools:context=".main.fragment.main_game.GameDetailActivity">
     <include layout="@layout/toolbar"/>
     <FrameLayout
         android:layout_width="match_parent"
