--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="cn.test.gudong.MainActivity">
+    tools:context="cn.test.gudong.main.MainActivity">
 
 
     <LinearLayout
