--- a/app/src/main/res/layout/activity_my_game.xml
+++ b/app/src/main/res/layout/activity_my_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.test.gudong.game.MyGameActivity">
+    tools:context=".main.fragment.main_game.MyGameActivity">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
