--- a/app/src/main/res/layout/f_sport_yundong.xml
+++ b/app/src/main/res/layout/f_sport_yundong.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="120dp">
 
 
-        <cn.test.gudong.myview.BgAnimate
+        <cn.test.gudong.view.BgAnimate
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
